--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -148,6 +148,54 @@ a:link {
    width: 120px;
 }
 
+.overlap-group-user-553 {
+   height: 70px;
+   width: 20%;
+   margin-left: 3%;
+   margin-right: 1%;
+   position: relative;
+   flex-wrap: wrap;
+ }
+
+ .overlap-group-requests-553 {
+   height: fit-content;
+   max-height: fit-content;
+   width: 60%;
+   margin-left: 2%;
+   position: relative;
+   margin-top: 30px;
+   background-color: white;
+ }
+
+ .box-outline-553 {
+   background-color: var(--white);
+   border-radius: 8px;
+   box-shadow: 0px 5px 10px 
+ #00000033;
+   height: 100%;
+   width: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+ }
+
+ .more-detail-label-553 {
+   letter-spacing: 0;
+   line-height: 30px;
+   margin-top: 1%;
+   margin-left: 20%;
+   margin-bottom: 1%;
+   min-width: 150px;
+   white-space: nowrap;
+ 
+   text-align: left;
+   color: black;
+   font-family: montserrat;
+   font-size: 30px;
+   font-weight: 500;
+   font-style: normal;
+ }
+
 .user-gender{
    margin-top: 10px;
 }
@@ -213,26 +261,36 @@ a:link {
    width: 5%;
    color: rgb(102, 102, 102);
    font-family: montserrat;
-   font-size: 20px;
+   font-size: 17px;
    font-weight: 400;
    font-style: normal;
- 
  }
 
  .request-username-553{
    width: 40%;
    color: rgb(102, 102, 102);
    font-family: montserrat;
-   font-size: 20px;
+   font-size: 17px;
    font-weight: 400;
+   width: 300px;
+   text-overflow: ellipsis;
+   margin-left: 10px;
    font-style: normal;
+ }
+
+ div.request-username-553 {
+   white-space: nowrap; 
+   width: 350px;
+   overflow: hidden;
+   text-overflow: ellipsis; 
  }
 
  .request-level-553{
    width: 15%;
    color: rgb(102, 102, 102);
    font-family: montserrat;
-   font-size: 20px;
+   font-size: 17px;
+   margin-left: 100px;
    font-weight: 400;
    font-style: normal;
  
@@ -243,6 +301,7 @@ a:link {
    font-family: montserrat;
    font-size: 20px;
    font-weight: 400;
+   margin-left: 40px;
    font-style: normal;
  }
 
@@ -285,17 +344,17 @@ a:link {
    box-shadow: 1px 3px 3px 1px #9E9E9E;
   }
  
-  .request-button-553 {
+  .request-button_553 {
    letter-spacing: 0;
    height: 100%;
-   width: 100%;
+   width: 100px;
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    white-space: nowrap;
  
    font-family:    Montserrat, sans-serif;
-   font-size:      20px;
+   font-size:      17px;
    font-weight:    bold;
  }
  
@@ -303,17 +362,32 @@ a:link {
    position: relative;
    width: 100%;
    height: 85%;
-   overflow-y: auto;
+   overflow-x: hidden;
+   overflow-y: hidden;
+   margin-top: -10px;
  }
  
  .flex-request-line-553 {
    display: flex;
    flex-direction: row;
    align-items: center;
-   height: 50px;
-   margin-top:1%;
+   height: 30px;
+   margin-top: 1px;
    margin-left: 2%;
    margin-right: 2%;
+   overflow: hidden;
+   text-overflow: ellipsis;
+ }
+
+ .flex-request-heads-553 {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin-left: 2%;
+   margin-right: 2%;
+   height: 8%;
+   margin-bottom: 10px;
+   background-color: #f6f2f2;
  }
 
 .info-user {
