--- a/frontend/src/components/ProfilePage/Profile.css
+++ b/frontend/src/components/ProfilePage/Profile.css
@@ -163,7 +163,7 @@ a:link {
    width: 60%;
    margin-left: 2%;
    position: relative;
-   margin-top: 30px;
+   margin-top: 10px;
    background-color: white;
  }
 
@@ -391,7 +391,8 @@ a:link {
  }
 
 .info-user {
-   width: 300px;
+   width: fit-content;
+   max-width: fit-content;
 }
 
 .intro-user{
